# MooViE

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  Args.cpp  Args.h  CMakeLists.txt  CairoDrawer.cpp  CairoDrawer.h  CodomainGrid.cpp  CodomainGrid.h  Color.cpp  Color.h  Config.h  Configuration.cpp  Configuration.h  CoordGrid.cc  CoordGrid.h  Coordinates.h  DataLink.cpp  DataLink.h  DataSet.cpp  DataSet.h  Dockerfile  DomainAxis.cpp  DomainAxis.h  Doxyfile.in  Drawer.cc  Drawer.h  DrawerProperties.h  LICENSE  Label.h  LinearMapping.cc  LinearMapping.h  Link.h  Mapper.h  MooViEArgs.cpp  MooViEArgs.h  PolarCartesian.h  README.md  RelationElement.cpp  (+21 more)
cmake/: FindCairo.cmake  FindCairomm-1.0.cmake  FindCairomm.cmake  FindFreetype2.cmake  FindSigC++.cmake  FindSigc++-2.0.cmake  Findcairo.cmake  Findcairomm-1.0.cmake  Findfreetype2.cmake  Findsigc++-2.0.cmake
docs/: Makefile
docs/source/: cli.md  conf.py  configuration.md  configuration.rst  gallery.md  gallery.rst  gui.md  gui.rst  index.rst  input.md  intro.md  postprocess.py  reference.rst  setup.md  setup.rst  visual_language.md  visual_language.rst
docs/source/gallery/: ed.md  intro_video.md  moo.md  secir.md
include/: CairoDrawer.h  CodomainGrid.h  Color.h  Configuration.h  Coordinates.h  DataSet.h  DomainAxis.h  Drawer.h  DrawerProperties.h  IOVector.h  InputAxis.h  Label.h  Mapper.h  OutputGrid.h  RelationElement.h  Scale.h  Scene.h  TextProperties.h  Triangle.h  Utils.h
include/desktop/: ConfDoubleWidget.h  ConfIntWidget.h  ConfStringWidget.h  ConfigurationDialog.h  IOList.h  IOListWidget.h  MainWindow.h  MooViEView.h
src/: CairoDrawer.cpp  CodomainGrid.cpp  Color.cpp  Configuration.cpp  DataSet.cpp  DomainAxis.cpp  IOVector.cpp  InputAxis.cpp  OutputGrid.cpp  RelationElement.cpp  Scale.cpp  Scene.cpp  Utils.cpp  moovie.cpp
src/desktop/: ConfDoubleWidget.cpp  ConfIntWidget.cpp  ConfStringWidget.cpp  ConfigurationDialog.cpp  IOList.cpp  IOListWidget.cpp  MainWindow.cpp  MooViEView.cpp  moovie-desktop.cpp
src/main/: CMakeLists.txt
src/main/cpp/: moovie.cpp
src/main/cpp/desktop/: ConfBoolWidget.cpp  ConfBoolWidget.h  ConfDoubleWidget.cpp  ConfIntWidget.cpp  ConfStringWidget.cpp  ConfStringWidget.h  ConfigurationDialog.cpp  ConfigurationDialog.h  IOList.cpp  IOList.h  IOListWidget.cpp  IOListWidget.h  MainWindow.cpp  MainWindow.h  MooViEView.cpp  MooViEView.h  moovie-desktop.cpp
src/main/cpp/lib/: CairoDrawer.cpp  CairoDrawer.h  Color.cpp  Color.h  Configuration.cpp  Configuration.h  Coordinates.h  DataSet.cpp  DataSet.h  Drawer.h  DrawerProperties.h  IOVector.cpp  IOVector.h  InputAxis.cpp  InputAxis.h  Label.h  Mapper.h  OutputGrid.cpp  OutputGrid.h  Scale.cpp  Scale.h  Scene.cpp  Scene.h  TextProperties.h  Utils.cpp  Utils.h
src/main/resources/ui/: ConfBoolWidget.ui  ConfDoubleWidget.ui  ConfStringWidget.ui  ConfigurationDialog.ui  MainWindow.ui
src/test/: CMakeLists.txt
src/test/cpp/: ConfigurationTest.cpp  CoordinatesTest.cpp  DataSetTest.cpp  GraphicalElementsTest.cpp  StorageElementsTest.cpp  UtilitiesTest.cpp
src/test/resources/: input.csv  input2_blank.csv  input5_nouse.csv  input6_nouse.csv  input8.csv
test/: CMakeLists.txt  ConfigurationTest.cpp  CoordinatesTest.cpp  DataSetTest.cpp  GraphicalElements.cpp  GraphicalElementsTest.cpp  PolarCartesianTest.cpp  StorageElementsTest.cpp  StorageElementsTests.cpp  UtilitiesTest.cpp
test/files/: input2.csv  input3.csv  input4_nouse.csv  input7.csv  moovie.conf
testfiles/: input.csv
ui/: ConfIntWidget.ui  ConfStringWidget.ui  ConfigurationDialog.ui  IOListWidget.ui  MainWindow.ui
